infrastructure/team-dev/oci/us/cluster/namespaces/main/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: main
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
    spec:
      volumes:
      - name: hello-html
        configMap:
          name: hello-html
      containers:
      - name: hello
        image: nginx:1.25.4
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: hello-html
      nodeSelector:
        node.kubernetes.io/app: "true"
      tolerations:
      - key: node.kubernetes.io/app
        operator: Equal
        value: "true"
        effect: NoSchedule
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: hello
