infrastructure/team-dev/oci/us/cluster/namespaces/main/manifests/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello
  namespace: main
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - oci-us.team.dev.wescaleout.cloud
